.. $Id$
.. $Author$
.. $Date$

Release Notes
=============

trunk
-----

June 12, 2018 Kevin Meagher
---------------------------
Release V01-09-01

- Use `OutputName` parameter in gulliver modules
- Script Cleanup: remove `Finish()` and `TrashCan`
- Documentation cleanup

March 13, 2017 Kevin Meagher (kmeagher@ulb.ac.be)
------------------------------------------------------------------
Release V01-09-00

* Add `SubEventStreamName` parameter to I3ResponseMapSplitter
* Add serialization library
* Tests clean up after themselves

May 2, 2016 Kevin Meagher (kmeagher@ulb.ac.be)
------------------------------------------------------------------
* Convert docs to rst
* Add namespaces to `isnan()`, `dynamic_pointer_cast()`	and `shared_ptr()`
* Add include guards to TestFrame.h
* cleanup of `resources/scripts`

April 3, 2015 Meike de With (meike.de.with@desy.de)
------------------------------------------------------------------
**Release V01-07-03**

- Recognize I3_TESTDATA

  -- Alex Olivas

- Fix compiler warnings in tests

  -- Don la Dieu


December 11, 2014 Meike de With (meike.de.with@desy.de)
-------------------------------------------------------------------
**Release V01-07-02**

- Force compile of template specializations (to avoid linking problems
  in unit tests)
- Include file that was moved from lilliput to ipdf

  -- David Boersma


September 29, 2014 Meike de With (meike.de.with@desy.de)
-------------------------------------------------------------------
**Release V01-07-01**

- Add directory for RST documentation
- Use the 'fortytwo' module from gulliver-modules to check the results
  of the test scripts
- In test scripts, pulse charges are no longer used
- Temporarily deactivate tests until it is understood why they fail on
  some platforms

  -- David Boersma


April 23, 2014 Meike de With (meike.de.with@desy.de)
-------------------------------------------------------------------
**Release V01-07-00**
