@@ -7,6 +7,8 @@ Release Notes
 
 trunk
 -----
+ - New maintainer, Frederik Lauber
+ - added test script dependencies to CMakeFile to hopefully make tests run after only building double-muon
 
 June 12, 2018 Kevin Meagher
 ---------------------------
